@@ -55,6 +55,12 @@ define("DATA_INPUT_TYPE_SCRIPT_QUERY", 4);
 define("DATA_INPUT_TYPE_PHP_SCRIPT_SERVER", 5);
 define("DATA_INPUT_TYPE_QUERY_SCRIPT_SERVER", 6);
 
+define("DATA_SOURCE_TYPE_GAUGE",	1);
+define("DATA_SOURCE_TYPE_COUNTER",	2);
+define("DATA_SOURCE_TYPE_DERIVE",	3);
+define("DATA_SOURCE_TYPE_ABSOLUTE",	4);
+define("DATA_SOURCE_TYPE_COMPUTE",	5);
+
 define("GRAPH_ITEM_TYPE_COMMENT", 1);
 define("GRAPH_ITEM_TYPE_HRULE",   2);
 define("GRAPH_ITEM_TYPE_VRULE",   3);
